--- a/src/mensagens.properties
+++ b/src/mensagens.properties
@@ -8,7 +8,7 @@ sis_agrega = SISTEMA DE GESTÃO
 tit_login = Login - SisAgrega 
 placeHolderLogin = Login
 placeHolderSenha = Senha
-tit_rodapeLogin = ©2016 All Rights Reserved. 
+tit_rodapeLogin = ©2016 Todos os direitos Reservados. 
  
 
 #Nomes botões (Padrão a todas as telas)
